# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\FiuselistController;
 use App\Http\Controllers\UserController;
 use App\Http\Controllers\ContentController;
 use Illuminate\Support\Facades\Route;
@@ -23,4 +24,5 @@ Route::middleware('auth:sanctum')->group(function (){
     Route::get('user/login', [UserController::class, 'loggedInUser']);
     Route::post('user/logout', [UserController::class, 'logout']);
     Route::apiResource('content', ContentController::class);
+    Route::get('fiuselist/user', [FiuselistController::class => 'getFiuselistOfCurrentlyLoggedInUser']);
 });
