# storage/api-docs/api-docs.json
@@ -325,6 +325,41 @@
                     }
                 }
             }
+        },
+        "/api/fiuselist/user": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "summary": "Endpoint to retrieve the fiuselist of the currently logged in user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Fiuselist"
+                ],
+                "parameters": [
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    },
+                    "422": {
+                        "description": "invalid input"
+                    },
+                    "500": {
+                        "description": "server error"
+                    }
+                }
+            }
         }
     },
     "tags": [
@@ -335,6 +370,10 @@
         {
             "name": "Content",
             "description": "CRUD endpoints for contents"
+        },
+        {
+            "name": "Fiuselist",
+            "description": "Endpoint regarding the fiuselist (watchlist) of users"
         }
     ]
 }
